name:                pretty-sop
version:             0.1.0.0
synopsis:            A generic pretty-printer using generics-sop
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries <edsko@well-typed.com>, Andres Löh <andres@well-typed.com>
maintainer:          edsko@well-typed.com
category:            Generics
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.2


library
  exposed-modules:     Generics.SOP.PrettyVal
  build-depends:       base                 >= 4.6  && < 5,
                       generics-sop         >= 0.1  && < 0.2,
                       pretty-show          >= 1.6  && < 1.7
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  ScopedTypeVariables
                       TypeFamilies
                       RankNTypes
                       TypeOperators
                       GADTs
                       ConstraintKinds
                       MultiParamTypeClasses
                       TypeSynonymInstances
                       FlexibleInstances
                       FlexibleContexts
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       DefaultSignatures
                       KindSignatures
                       DataKinds
                       FunctionalDependencies
  if impl (ghc >= 7.8)
    default-extensions:  AutoDeriveTypeable
  other-extensions:    OverloadedStrings
                       OverlappingInstances
                       PolyKinds
                       UndecidableInstances
                       TemplateHaskell
                       CPP
